Added/updated workflowr files.

--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,4 +1,4 @@
-name: misc
+name: stephens999/misc
 output_dir: "../docs"
 include: [".nojekyll"]
 exclude: ["include"]
@@ -7,18 +7,12 @@ navbar:
   left:
     - text: "Home"
       href: index.html
-    - text: "About"
-      href: about.html
-    - text: "License"
-      href: license.html
   right:
-    - icon: fa-github
-      href: https://github.com/jdblischak/workflowr
+    - text: source
+      href: https://github.com/stephens999/misc
 output:
   html_document:
     toc: true
     toc_float: true
     theme: cosmo
     highlight: textmate
-    include:
-      after_body: include/footer.html
